--- a/src/scss/utils/fonts.scss
+++ b/src/scss/utils/fonts.scss
@@ -1,27 +1,21 @@
 @font-face {
-    font-family: 'Conv_Quicksand-Bold';
-	  src: local('☺'), url('/dist/assets/fonts/Quicksand/Bold/Quicksand-Bold.ttf') format('truetype'), url('/dist/assets/fonts/Quicksand/Bold/Quicksand-Bold.woff') format('woff'), url('/dist/assets/fonts/Quicksand/Bold/Quicksand-Bold.svg') format('svg');
-	  font-weight: normal;
-	  font-style: normal;
+    font-family: "Conv_Quicksand-Bold";
+	  src: url('/assets/fonts/Quicksand/Bold/Quicksand-Bold.woff') format('woff');
+	  src: url('/assets/fonts/Quicksand/Bold/Quicksand-Bold.ttf') format('truetype'), url('/assets/fonts/Quicksand/Bold/Quicksand-Bold.svg') format('svg');
 }
 
 @font-face {
     font-family: 'Conv_Quicksand-Medium';
-	  src: local('☺'), url('/dist/assets/fonts/Quicksand/Medium/Quicksand-Medium.ttf') format('truetype'), url('/dist/assets/fonts/Quicksand/Medium/Quicksand-Medium.woff') format('woff'), url('/dist/assets/fonts/Quicksand/Medium/Quicksand-Medium.svg') format('svg');
-	  font-weight: normal;
-	  font-style: normal;
+	  src: url('/assets/fonts/Quicksand/Medium/Quicksand-Medium.woff') format('woff');src: url('/assets/fonts/Quicksand/Medium/Quicksand-Medium.ttf') format('truetype'),  url('/assets/fonts/Quicksand/Medium/Quicksand-Medium.svg') format('svg');
 }
 
 @font-face {
     font-family: 'Conv_Montserrat-Bold';
-	  src: local('☺'), url('/dist/assets/fonts/Montserrat/Bold/Montserrat-Bold.ttf') format('truetype'), url('/dist/assets/fonts/Montserrat/Bold/Montserrat-Bold.woff') format('woff'), url('/dist/assets/fonts/Montserrat/Bold/Montserrat-Bold.svg') format('svg');
-	  font-weight: normal;
-	  font-style: normal;
+	  src: url('/assets/fonts/Montserrat/Bold/Montserrat-Bold.woff') format('woff'); src: url('/assets/fonts/Montserrat/Bold/Montserrat-Bold.ttf') format('truetype'), url('/assets/fonts/Montserrat/Bold/Montserrat-Bold.svg') format('svg');
 }
 
 @font-face {
     font-family: 'Conv_Montserrat-Regular';
-	  src: local('☺'), url('/dist/assets/fonts/Montserrat/Regular/Montserrat-Regular.ttf') format('truetype'), url('/dist/assets/fonts/Montserrat/Regular/Montserrat-Regular.woff') format('woff'), url('/dist/assets/fonts/Montserrat/Regular/Montserrat-Regular.svg') format('svg');
-	  font-weight: normal;
-	  font-style: normal;
+	  src: url('/assets/fonts/Montserrat/Regular/Montserrat-Regular.woff') format('woff');
+	  src: url('/assets/fonts/Montserrat/Regular/Montserrat-Regular.ttf') format('truetype'), url('/assets/fonts/Montserrat/Regular/Montserrat-Regular.svg') format('svg');
 }
