rename variables to vars delete main.scss create empty pages: landing, registration, room details, search room, sing in

--- a/src/assets/scss/UIKit/colorsAndType.scss
+++ b/src/assets/scss/UIKit/colorsAndType.scss
@@ -1,5 +1,5 @@
 @import "../utils/reset.scss";
-@import "../utils/variables";
+@import "../utils/vars";
 
 .container-fluid {
     max-width: 1440px;
