--- a/src/pages/UIKit/colorsAndType/colorsAndType.scss
+++ b/src/pages/UIKit/colorsAndType/colorsAndType.scss
@@ -1,5 +1,5 @@
-@import "../utils/reset.scss";
-@import "../utils/vars";
+@import "../../../assets/scss/reset.scss";
+@import "../../../assets/scss/vars";
 
 .container-fluid {
     max-width: 1440px;
