--- a/src/assets/pug/layout/main.pug
+++ b/src/assets/pug/layout/main.pug
@@ -12,9 +12,9 @@ html(lang="en")
         
     body(class=pageClass)
         .wrapper
-            include ../includes/modules/header
+            include ../includes/header
             .content-wrapper
                 block content
-            include ../includes/modules/footer
+            include ../includes/footer
 
         block script
