--- a/src/pages/UIKit/colorsAndType/colorsAndType.scss
+++ b/src/pages/UIKit/colorsAndType/colorsAndType.scss
@@ -2,8 +2,8 @@
 @import "../../../assets/scss/vars";
 
 .container-fluid {
-    max-width: 1440px;
-    height: 900px;
+    max-width: 1160px;
+    margin: 0 auto;
 }
 
 .b-logo {    
