--- a/src/pages/UIKit/colorsAndType/colorsAndType.scss
+++ b/src/pages/UIKit/colorsAndType/colorsAndType.scss
@@ -1,28 +1,18 @@
 @import "../../../assets/scss/reset.scss";
 @import "../../../assets/scss/vars";
+@import "../../../components/color-item/color-item";
 
-.container-fluid {
+.container {
     max-width: 1160px;
     margin: 0 auto;
 }
 
-.b-logo {    
-    margin-top: 30px;
-    margin-left: 30px;
-    width: 48px;
-    height: 48px;
-}
-
-.b-colorsAndTypeWrap {
-    margin-top: 145px;
-    margin-left: 150px;
+.colors-wrap {
+    
 }
 
 .b-colorItem {
-    margin-bottom: 20px;
-    height: 70px;
-    display: flex;
-    align-items: center;
+    
 
     &:nth-child(1) &__block{
             background: $darkShade100;
