add mixin color-item

--- a/src/pages/UIKit/colorsAndType/colorsAndType.pug
+++ b/src/pages/UIKit/colorsAndType/colorsAndType.pug
@@ -13,41 +13,48 @@ block content
   .container
     section.colors-wrap
       include ../../../components/color-item/color-item
+      +color-item('Dark Shade 100%', '#1F2041')
+      +color-item('Dark Shade 75%', '#1F2041')
+      +color-item('Dark Shade 50%', '#1F2041')
+      +color-item('Dark Shade 25%', '#1F2041')
+      +color-item('Dark Shade 5%', '#1F2041')
+      +color-item('Purple', '#BC9CFF')
+      +color-item('Green', '#6FCF97')
       //- .color-item
       //-   .color-item__block                                
       //-   .color-item__description
       //-     .color-item__title Dark Shade 100%                                       
       //-     .color-item__hex #1F2041                         
-      .color-item
-        .color-item__block                               
-        .color-item__description
-          .color-item__title Dark Shade 75%                                  
-          .color-item__hex #1F2041                           
-      .color-item
-        .color-item__block                                 
-        .color-item__description
-          .color-item__title Dark Shade 50%                                       
-          .color-item__hex #1F2041                           
-      .color-item
-        .color-item__block                                 
-        .color-item__description
-          .color-item__title Dark Shade 25%                                       
-          .color-item__hex #1F2041                          
-      .color-item
-        .color-item__block                                 
-        .color-item__description
-          .color-item__title Dark Shade 5%                                       
-          .color-item__hex #1F204                          
-      .color-item
-        .color-item__block                                 
-        .color-item__description
-          .color-item__title Purple                                       
-          .color-item__hex #BC9CFF                           
-      .color-item
-        .color-item__block                                 
-        .color-item__description
-          .color-item__title Green                                      
-          .color-item__hex #6FCF97                    
+      //- .color-item
+      //-   .color-item__block                               
+      //-   .color-item__description
+      //-     .color-item__title Dark Shade 75%                                  
+      //-     .color-item__hex #1F2041                           
+      //- .color-item
+      //-   .color-item__block                                 
+      //-   .color-item__description
+      //-     .color-item__title Dark Shade 50%                                       
+      //-     .color-item__hex #1F2041                           
+      //- .color-item
+      //-   .color-item__block                                 
+      //-   .color-item__description
+      //-     .color-item__title Dark Shade 25%                                       
+      //-     .color-item__hex #1F2041                          
+      //- .color-item
+      //-   .color-item__block                                 
+      //-   .color-item__description
+      //-     .color-item__title Dark Shade 5%                                       
+      //-     .color-item__hex #1F204                          
+      //- .color-item
+      //-   .color-item__block                                 
+      //-   .color-item__description
+      //-     .color-item__title Purple                                       
+      //-     .color-item__hex #BC9CFF                           
+      //- .color-item
+      //-   .color-item__block                                 
+      //-   .color-item__description
+      //-     .color-item__title Green                                      
+      //-     .color-item__hex #6FCF97                    
     section.type-wrap
       .typeItem
         .typeItem__name H1                                 
