create var opacity and opacityStep

--- a/src/assets/scss/vars.scss
+++ b/src/assets/scss/vars.scss
@@ -13,6 +13,9 @@ $darkShade50: rgba($darkShadeBase, 0.5);
 $darkShade25: rgba($darkShadeBase, 0.25);
 $darkShade5: rgba($darkShadeBase, 0.05);
 
+$opacity: 1;
+$opacityStep: 0.25;
+
 $buttonColor: #BC9CFF;
 
 $activeColor: #6FCF97;
