--- a/src/assets/scss/vars.scss
+++ b/src/assets/scss/vars.scss
@@ -13,9 +13,8 @@ $darkShade50: rgba($darkShadeBase, 0.5);
 $darkShade25: rgba($darkShadeBase, 0.25);
 $darkShade5: rgba($darkShadeBase, 0.05);
 
-$opacity: 1;
-$opacityStep: 0.25;
-
 $buttonColor: #BC9CFF;
 
 $activeColor: #6FCF97;
+
+$colors: ($darkShade100 $darkShade75 $darkShade50 $darkShade25 $darkShade5 $buttonColor $activeColor);
