--- a/src/components/color-item/color-item.scss
+++ b/src/components/color-item/color-item.scss
@@ -2,50 +2,23 @@
     margin-bottom: 20px;
     height: 70px;
     display: flex;
-    align-items: center;
-
-    // &__block {
-    //     background: $darkShade100;
-    // }
+    align-items: center;    
 
     &__block {
         width: 70px;
         height: 70px;
         border-radius: 6px;
-
-        @for $i from 1 through 13 {
+       
+        @for $i from 1 through 14 {  // 14 равно количиству color-item * 2, при изменении количества требуется добавить цвета в $colors находится в vars.scss          
             &:nth-child(#{$i}){
-                background: rgba($darkShadeBase, $opacity);              
-                $opacity: $opacity - $opacityStep;              
+                @if $i / 2 == 1 {
+                    background: none;                      
+                }
+                @else {                        
+                    background: nth($colors, ($i + 1) / 2);
+                }                 
             }
-          }
-        // &:nth-child(1) {
-        //     background: $darkShade100;
-        // }
-    
-        // &:nth-child(3) {
-        //     background: $darkShade75;
-        // }
-    
-        // &:nth-child(5) {
-        //     background: $darkShade50;
-        // }
-    
-        // &:nth-child(7) {
-        //     background: $darkShade25;
-        // }
-    
-        // &:nth-child(9) {
-        //     background: $darkShade5;
-        // }
-    
-        // &:nth-child(11) {
-        //     background: $buttonColor;
-        // }
-    
-        // &:nth-child(13) {
-        //     background: $activeColor;
-        // }
+        }        
     }
 
     
