--- a/src/components/color-item/color-item.pug
+++ b/src/components/color-item/color-item.pug
@@ -1,5 +1,6 @@
 mixin color-item(title, hex)
-  .color-item__block                            
-  .color-item__description
-    .color-item__title= title                                       
-    .color-item__hex= hex
+  .color-item
+    .color-item__block                            
+    .color-item__description
+      .color-item__title= title                                       
+      .color-item__hex= hex
